kuber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
  namespace: dev
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
  type: NodePort
